--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,9 +1,16 @@
 {
-  "name": "api",
+  "name": "@packages/api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.ts",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "@packages/db": "1.0.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/uuid": "^8.3.4",
+    "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
+    "typescript": "^4.9.3",
+    "uuid": "^9.0.0"
+  },
+  "type": "commonjs"
 }
