--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "@packages/db": "1.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/uuid": "^8.3.4",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0"
