--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,10 +7,12 @@
     "@packages/db": "1.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
+    "@types/lodash": "^4.14.189",
     "@types/uuid": "^8.3.4",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0"
   },
