--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,8 +13,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "nodemon": "^2.0.20",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0"
+  },
+  "scripts": {
+    "start": "tsc --build && nodemon app.js"
   },
   "type": "commonjs"
 }
