--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.ts",
   "license": "MIT",
+  "scripts": {
+    "start": "tsc --build"
+  },
   "dependencies": {
     "knex": "^2.3.0",
     "pg": "^8.8.0",
