--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "packages/*"
   ],
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@types/googlemaps": "^3.43.3",
     "concurrently": "^7.6.0",
+    "prettier": "^2.8.1",
+    "react-router-dom": "^6.6.1",
     "typescript": "^4.9.3"
   }
 }
