--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "build": "yarn workspaces foreach -p -v -i run build",
     "dev": "yarn workspaces foreach -p -v -i run start"
   },
   "workspaces": [
