--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "knex": "^2.3.0",
     "pg": "^8.8.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "uuid": "^9.0.0"
   }
 }
