Add db tables for addresses, apartments, listings + Change user authentication method using jwt

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.ts",
   "license": "MIT",
+  "type": "commonjs",
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean",
