--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "scripts": {
     "build": "yarn workspaces foreach -p -v -i run build",
+    "clean": "yarn workspaces foreach -p -v -i run clean",
     "dev": "yarn workspaces foreach -p -v -i run start",
     "seed": "cd packages/db && tsc index.ts && node index.js"
   },
