--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,11 +7,14 @@
     "@packages/db": "1.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.189",
     "@types/uuid": "^8.3.4",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.3",
