--- a/packages/spa/package.json
+++ b/packages/spa/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "",
+    "clean": "",
     "build-deploy": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
