--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@mui/x-date-pickers": "^6.0.3",
     "@types/googlemaps": "^3.43.3",
     "concurrently": "^7.6.0",
     "prettier": "^2.8.1",
