--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,11 +12,11 @@
     "@types/uuid": "^8.3.4",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0"
