--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,6 +9,7 @@
     "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.189",
+    "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.4",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
@@ -17,6 +18,7 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0"
