--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-date-pickers": "^6.0.3",
     "@types/googlemaps": "^3.43.3",
     "concurrently": "^7.6.0",
+    "http-server": "^14.1.1",
     "prettier": "^2.8.1",
     "react-router-dom": "^6.6.1",
     "typescript": "^4.9.3"
