--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,6 +12,7 @@
     "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.4",
     "bcrypt": "^5.1.0",
+    "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -26,7 +27,7 @@
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean",
-    "start": "nodemon app.js",
+    "start": "concurrently -n API,Storage \"nodemon app.js\" \"http-server\"",
     "seed": "node seeds.js"
   },
   "type": "commonjs"
