Add edit listing page

--- a/packages/scraper/package.json
+++ b/packages/scraper/package.json
@@ -12,6 +12,6 @@
   "scripts": {
     "clean": "yarn tsc --build --clean",
     "build": "yarn tsc",
-    "start": "node ./bin/scraper.js"
+    "start": ""
   }
 }
