Add current contract page in tenant user space

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean",
-    "start": "concurrently -n API,Storage \"nodemon app.js\" \"http-server ..\/..\/\"",
+    "start": "concurrently -n API,Storage \"nodemon app.js\" \"http-server ../../\"",
     "seed": "node seeds.js"
   },
   "type": "commonjs"
