--- a/packages/spa/package.json
+++ b/packages/spa/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@googlemaps/markerclusterer": "^2.1.4",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.10.9",
@@ -12,6 +13,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/google-maps": "^3.2.3",
+    "@types/google-maps-react": "^2.0.5",
+    "@types/googlemaps": "^3.43.3",
     "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.191",
     "@types/node": "^16.7.13",
@@ -21,6 +25,7 @@
     "@types/react-swipeable-views-utils": "^0.13.4",
     "axios": "^1.1.3",
     "formik": "^2.2.9",
+    "google-maps-react": "^2.0.6",
     "lodash": "^4.17.21",
     "material-ui-dropzone": "^3.5.0",
     "moment": "^2.29.4",
@@ -30,6 +35,7 @@
     "react-scripts": "5.0.1",
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
+    "sass": "^1.62.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
