--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,12 +5,15 @@
   "license": "MIT",
   "dependencies": {
     "@packages/db": "1.0.0",
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.189",
     "@types/multer": "^1.4.7",
+    "@types/multer-s3": "2.7.12",
     "@types/uuid": "^8.3.4",
+    "aws-sdk": "^2.1389.0",
     "bcrypt": "^5.1.0",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
@@ -20,6 +23,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "2.10.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0"
