--- a/packages/spa/package.json
+++ b/packages/spa/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^2.1.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@googlemaps/markerclusterer": "^2.1.4",
@@ -13,6 +14,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/auth0-lock": "^11.27.5",
     "@types/google-maps": "^3.2.3",
     "@types/google-maps-react": "^2.0.5",
     "@types/googlemaps": "^3.43.3",
@@ -23,6 +25,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-swipeable-views": "^0.13.1",
     "@types/react-swipeable-views-utils": "^0.13.4",
+    "auth0-lock": "^12.0.2",
     "axios": "^1.1.3",
     "formik": "^2.2.9",
     "google-maps-react": "^2.0.6",
