--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "yarn workspaces foreach -p -v -i run build",
     "clean": "yarn workspaces foreach -p -v -i run clean",
     "dev": "yarn workspaces foreach -p -v -i run start",
-    "seed": "cd packages/api && yarn seed"
+    "seed": "cd packages/api && yarn seed",
+    "test": "jest"
   },
   "workspaces": [
     "packages/*"
@@ -24,5 +25,10 @@
     "prettier": "^2.8.1",
     "react-router-dom": "^6.6.1",
     "typescript": "^4.9.3"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.5.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0"
   }
 }
