Add integration tests

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clean": "yarn workspaces foreach -p -v -i run clean",
     "dev": "yarn workspaces foreach -p -v -i run start",
     "seed": "cd packages/api && yarn seed",
-    "test": "jest"
+    "test": "cross-env NODE_ENV=test jest"
   },
   "workspaces": [
     "packages/*"
@@ -28,7 +28,10 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
+    "@types/supertest": "^2.0.12",
+    "cross-env": "^7.0.3",
     "jest": "^29.5.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0"
   }
 }
